// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getMembers does work with custom expressions in arguments 1`] = `
Array [
  Object {
    "argumentsPath": Node {
      "arguments": Array [
        Node {
          "end": 18,
          "left": Node {
            "end": 12,
            "loc": SourceLocation {
              "end": Position {
                "column": 12,
                "line": 1,
              },
              "filename": undefined,
              "identifierName": undefined,
              "start": Position {
                "column": 9,
                "line": 1,
              },
            },
            "raw": "123",
            "start": 9,
            "type": "Literal",
            "value": 123,
          },
          "loc": SourceLocation {
            "end": Position {
              "column": 18,
              "line": 1,
            },
            "filename": undefined,
            "identifierName": undefined,
            "start": Position {
              "column": 9,
              "line": 1,
            },
          },
          "operator": "+",
          "right": Node {
            "end": 18,
            "loc": SourceLocation {
              "end": Position {
                "column": 18,
                "line": 1,
              },
              "filename": undefined,
              "identifierName": undefined,
              "start": Position {
                "column": 15,
                "line": 1,
              },
            },
            "raw": "123",
            "start": 15,
            "type": "Literal",
            "value": 123,
          },
          "start": 9,
          "type": "BinaryExpression",
        },
      ],
      "callee": Node {
        "computed": false,
        "end": 8,
        "loc": SourceLocation {
          "end": Position {
            "column": 8,
            "line": 1,
          },
          "filename": undefined,
          "identifierName": undefined,
          "start": Position {
            "column": 1,
            "line": 1,
          },
        },
        "object": Node {
          "end": 4,
          "loc": SourceLocation {
            "end": Position {
              "column": 4,
              "line": 1,
            },
            "filename": undefined,
            "identifierName": "foo",
            "start": Position {
              "column": 1,
              "line": 1,
            },
          },
          "name": "foo",
          "start": 1,
          "type": "Identifier",
        },
        "optional": false,
        "property": Node {
          "end": 8,
          "loc": SourceLocation {
            "end": Position {
              "column": 8,
              "line": 1,
            },
            "filename": undefined,
            "identifierName": "bar",
            "start": Position {
              "column": 5,
              "line": 1,
            },
          },
          "name": "bar",
          "start": 5,
          "type": "Identifier",
        },
        "start": 1,
        "type": "MemberExpression",
      },
      "end": 19,
      "loc": SourceLocation {
        "end": Position {
          "column": 19,
          "line": 1,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 1,
          "line": 1,
        },
      },
      "optional": false,
      "start": 1,
      "type": "CallExpression",
    },
    "computed": false,
    "path": Node {
      "end": 8,
      "loc": SourceLocation {
        "end": Position {
          "column": 8,
          "line": 1,
        },
        "filename": undefined,
        "identifierName": "bar",
        "start": Position {
          "column": 5,
          "line": 1,
        },
      },
      "name": "bar",
      "start": 5,
      "type": "Identifier",
    },
  },
  Object {
    "argumentsPath": null,
    "computed": true,
    "path": Node {
      "end": 25,
      "loc": SourceLocation {
        "end": Position {
          "column": 25,
          "line": 1,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 20,
          "line": 1,
        },
      },
      "raw": "\\"baz\\"",
      "start": 20,
      "type": "Literal",
      "value": "baz",
    },
  },
]
`;

exports[`getMembers does work with custom expressions in chain 1`] = `
Array [
  Object {
    "argumentsPath": Node {
      "arguments": Array [
        Node {
          "end": 12,
          "loc": SourceLocation {
            "end": Position {
              "column": 12,
              "line": 1,
            },
            "filename": undefined,
            "identifierName": undefined,
            "start": Position {
              "column": 9,
              "line": 1,
            },
          },
          "raw": "123",
          "start": 9,
          "type": "Literal",
          "value": 123,
        },
      ],
      "callee": Node {
        "computed": false,
        "end": 8,
        "loc": SourceLocation {
          "end": Position {
            "column": 8,
            "line": 1,
          },
          "filename": undefined,
          "identifierName": undefined,
          "start": Position {
            "column": 1,
            "line": 1,
          },
        },
        "object": Node {
          "end": 4,
          "loc": SourceLocation {
            "end": Position {
              "column": 4,
              "line": 1,
            },
            "filename": undefined,
            "identifierName": "foo",
            "start": Position {
              "column": 1,
              "line": 1,
            },
          },
          "name": "foo",
          "start": 1,
          "type": "Identifier",
        },
        "optional": false,
        "property": Node {
          "end": 8,
          "loc": SourceLocation {
            "end": Position {
              "column": 8,
              "line": 1,
            },
            "filename": undefined,
            "identifierName": "bar",
            "start": Position {
              "column": 5,
              "line": 1,
            },
          },
          "name": "bar",
          "start": 5,
          "type": "Identifier",
        },
        "start": 1,
        "type": "MemberExpression",
      },
      "end": 13,
      "loc": SourceLocation {
        "end": Position {
          "column": 13,
          "line": 1,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 1,
          "line": 1,
        },
      },
      "optional": false,
      "start": 1,
      "type": "CallExpression",
    },
    "computed": false,
    "path": Node {
      "end": 8,
      "loc": SourceLocation {
        "end": Position {
          "column": 8,
          "line": 1,
        },
        "filename": undefined,
        "identifierName": "bar",
        "start": Position {
          "column": 5,
          "line": 1,
        },
      },
      "name": "bar",
      "start": 5,
      "type": "Identifier",
    },
  },
  Object {
    "argumentsPath": null,
    "computed": true,
    "path": Node {
      "end": 21,
      "left": Node {
        "end": 16,
        "loc": SourceLocation {
          "end": Position {
            "column": 16,
            "line": 1,
          },
          "filename": undefined,
          "identifierName": undefined,
          "start": Position {
            "column": 14,
            "line": 1,
          },
        },
        "raw": "\\"\\"",
        "start": 14,
        "type": "Literal",
        "value": "",
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 21,
          "line": 1,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 14,
          "line": 1,
        },
      },
      "operator": "+",
      "right": Node {
        "end": 21,
        "loc": SourceLocation {
          "end": Position {
            "column": 21,
            "line": 1,
          },
          "filename": undefined,
          "identifierName": undefined,
          "start": Position {
            "column": 19,
            "line": 1,
          },
        },
        "raw": "\\"\\"",
        "start": 19,
        "type": "Literal",
        "value": "",
      },
      "start": 14,
      "type": "BinaryExpression",
    },
  },
]
`;

exports[`getMembers finds all "members" "inside" a MemberExpression 1`] = `
Array [
  Object {
    "argumentsPath": Node {
      "arguments": Array [
        Node {
          "end": 12,
          "loc": SourceLocation {
            "end": Position {
              "column": 12,
              "line": 1,
            },
            "filename": undefined,
            "identifierName": undefined,
            "start": Position {
              "column": 9,
              "line": 1,
            },
          },
          "raw": "123",
          "start": 9,
          "type": "Literal",
          "value": 123,
        },
      ],
      "callee": Node {
        "computed": false,
        "end": 8,
        "loc": SourceLocation {
          "end": Position {
            "column": 8,
            "line": 1,
          },
          "filename": undefined,
          "identifierName": undefined,
          "start": Position {
            "column": 1,
            "line": 1,
          },
        },
        "object": Node {
          "end": 4,
          "loc": SourceLocation {
            "end": Position {
              "column": 4,
              "line": 1,
            },
            "filename": undefined,
            "identifierName": "foo",
            "start": Position {
              "column": 1,
              "line": 1,
            },
          },
          "name": "foo",
          "start": 1,
          "type": "Identifier",
        },
        "optional": false,
        "property": Node {
          "end": 8,
          "loc": SourceLocation {
            "end": Position {
              "column": 8,
              "line": 1,
            },
            "filename": undefined,
            "identifierName": "bar",
            "start": Position {
              "column": 5,
              "line": 1,
            },
          },
          "name": "bar",
          "start": 5,
          "type": "Identifier",
        },
        "start": 1,
        "type": "MemberExpression",
      },
      "end": 13,
      "loc": SourceLocation {
        "end": Position {
          "column": 13,
          "line": 1,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 1,
          "line": 1,
        },
      },
      "optional": false,
      "start": 1,
      "type": "CallExpression",
    },
    "computed": false,
    "path": Node {
      "end": 8,
      "loc": SourceLocation {
        "end": Position {
          "column": 8,
          "line": 1,
        },
        "filename": undefined,
        "identifierName": "bar",
        "start": Position {
          "column": 5,
          "line": 1,
        },
      },
      "name": "bar",
      "start": 5,
      "type": "Identifier",
    },
  },
  Object {
    "argumentsPath": null,
    "computed": true,
    "path": Node {
      "end": 22,
      "loc": SourceLocation {
        "end": Position {
          "column": 22,
          "line": 1,
        },
        "filename": undefined,
        "identifierName": "baz",
        "start": Position {
          "column": 19,
          "line": 1,
        },
      },
      "name": "baz",
      "start": 19,
      "type": "Identifier",
    },
  },
  Object {
    "argumentsPath": null,
    "computed": true,
    "path": Node {
      "end": 26,
      "loc": SourceLocation {
        "end": Position {
          "column": 26,
          "line": 1,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 24,
          "line": 1,
        },
      },
      "raw": "42",
      "start": 24,
      "type": "Literal",
      "value": 42,
    },
  },
]
`;

exports[`getMembers includes the root if option set to true 1`] = `
Array [
  Object {
    "argumentsPath": null,
    "computed": false,
    "path": Node {
      "end": 4,
      "loc": SourceLocation {
        "end": Position {
          "column": 4,
          "line": 1,
        },
        "filename": undefined,
        "identifierName": "foo",
        "start": Position {
          "column": 1,
          "line": 1,
        },
      },
      "name": "foo",
      "start": 1,
      "type": "Identifier",
    },
  },
  Object {
    "argumentsPath": Node {
      "arguments": Array [
        Node {
          "end": 12,
          "loc": SourceLocation {
            "end": Position {
              "column": 12,
              "line": 1,
            },
            "filename": undefined,
            "identifierName": undefined,
            "start": Position {
              "column": 9,
              "line": 1,
            },
          },
          "raw": "123",
          "start": 9,
          "type": "Literal",
          "value": 123,
        },
      ],
      "callee": Node {
        "computed": false,
        "end": 8,
        "loc": SourceLocation {
          "end": Position {
            "column": 8,
            "line": 1,
          },
          "filename": undefined,
          "identifierName": undefined,
          "start": Position {
            "column": 1,
            "line": 1,
          },
        },
        "object": Node {
          "end": 4,
          "loc": SourceLocation {
            "end": Position {
              "column": 4,
              "line": 1,
            },
            "filename": undefined,
            "identifierName": "foo",
            "start": Position {
              "column": 1,
              "line": 1,
            },
          },
          "name": "foo",
          "start": 1,
          "type": "Identifier",
        },
        "optional": false,
        "property": Node {
          "end": 8,
          "loc": SourceLocation {
            "end": Position {
              "column": 8,
              "line": 1,
            },
            "filename": undefined,
            "identifierName": "bar",
            "start": Position {
              "column": 5,
              "line": 1,
            },
          },
          "name": "bar",
          "start": 5,
          "type": "Identifier",
        },
        "start": 1,
        "type": "MemberExpression",
      },
      "end": 13,
      "loc": SourceLocation {
        "end": Position {
          "column": 13,
          "line": 1,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 1,
          "line": 1,
        },
      },
      "optional": false,
      "start": 1,
      "type": "CallExpression",
    },
    "computed": false,
    "path": Node {
      "end": 8,
      "loc": SourceLocation {
        "end": Position {
          "column": 8,
          "line": 1,
        },
        "filename": undefined,
        "identifierName": "bar",
        "start": Position {
          "column": 5,
          "line": 1,
        },
      },
      "name": "bar",
      "start": 5,
      "type": "Identifier",
    },
  },
  Object {
    "argumentsPath": null,
    "computed": true,
    "path": Node {
      "end": 17,
      "loc": SourceLocation {
        "end": Position {
          "column": 17,
          "line": 1,
        },
        "filename": undefined,
        "identifierName": "baz",
        "start": Position {
          "column": 14,
          "line": 1,
        },
      },
      "name": "baz",
      "start": 14,
      "type": "Identifier",
    },
  },
]
`;
